crates/keron-lang/tests/corpus/errors/check/val_collides_with_symlink_builtin.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `symlink` is a builtin and cannot be redefined
  --> 1:5
  |
1 | val symlink = 1
  |     ^^^^^^^
